--- a/class2.ipynb
+++ b/class2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNFLIffMW86E6P2acIJvtaa",
+      "authorship_tag": "ABX9TyPPu8ZKpjF44IpmN4yOgyVK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -320,6 +320,50 @@
           "name": "stdout",
           "text": [
             "Exponent: 125\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Assignment*"
+      ],
+      "metadata": {
+        "id": "i7TUIzpaGxSJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Total_faculty = 12\n",
+        "Administrative_staff = 4\n",
+        "Students = 100\n",
+        "Absentees = 15\n",
+        "totalpeople = Total_faculty + Administrative_staff + Students - Absentees\n",
+        "Rabri = 250 * totalpeople\n",
+        "totalRabri = f\"{Rabri}g\"\n",
+        "\n",
+        "print(f\"\"\"Total People: {totalpeople}\n",
+        "Total Rabri: {totalRabri}\n",
+        "\"\"\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "55k-EQbfyxi5",
+        "outputId": "c93dbf32-efad-4636-f9f3-a3561c9e7217"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total People: 101\n",
+            "Total Rabri: 25250g\n",
+            "\n"
           ]
         }
       ]
